--- a/waybar/config
+++ b/waybar/config
@@ -70,7 +70,7 @@
 		"tooltip": false
 	},
 	"clock#2": {
-		"format": "{:%H:%M}",
+		"format": "{:%I:%M %p}",
 		"tooltip": false
 	},
 	"clock#3": {
