--- a/sway/config
+++ b/sway/config
@@ -44,7 +44,7 @@ output * bg ~/Pictures/wallpaper.png fill
 exec swayidle -w \
           timeout 300 'swaylock -f -c 000000' \
           timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
-          before-sleep 'swaylock -f -c 000000'
+          before-sleep 'swaylock -f -e -i ~/Pictures/lockScreen.png -s tile'
 
 ### Input configuration
 #
