--- a/sway/config
+++ b/sway/config
@@ -4,6 +4,11 @@
 #
 # Read `man 5 sway` for a complete reference.
 
+
+# setup for obs
+exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
+
 xwayland enable
 
 ### Variables
@@ -94,7 +99,7 @@ exec swayidle -w \
     set $refresh_i3status kill all -SIGUSR1 i3status
     bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +5%
     bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -5% 
-    bindsym XF86AudioMute exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ toggle 
+    bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle 
 
     #use light to change brightness of display
     exec --no-startup-id -N 5
@@ -249,6 +254,11 @@ bar {
     swaybar_command waybar
 }
 
+
+assign [app_id="com.obsproject.Studio"] 6 
+assign [app_id="obsidian"] 3
+assign [app_id="WebCord"] 4
+
 bindsym Print exec "grimshot save area"
 
 #smarter splitting cause im lazy :3
@@ -263,4 +273,5 @@ focus_follows_mouse no
 
 # move cursor to focused window on switch
 mouse_warping container
+
 
