--- a/waybar/config
+++ b/waybar/config
@@ -81,7 +81,7 @@
 	"pulseaudio": {
 		"format": "{icon} {volume:2}%",
 		"format-bluetooth": "{icon}  {volume}%",
-		"format-muted": "MUTE",
+		"format-muted": "󰝟",
 		"format-icons": {
 			"headphones": "",
 			"default": [
