--- a/sway/config
+++ b/sway/config
@@ -7,11 +7,11 @@
 # hide cursor after time (this is in ms) 
 seat * hide_cursor 10000
 
-
 # setup for obs
 exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
+# xwayland stuff
 xwayland enable
 
 ### Variables
@@ -77,13 +77,14 @@ exec swayidle -w \
     bindsym $mod+Shift+x exec swaylock -f -e -i ~/Pictures/lockScreen.png -s tile
 
     # Start a terminal
-    bindsym $mod+Return exec swaymsg "exec $term --single-instance"
+    bindsym $mod+Return exec swaymsg 'border pixel 0' & swaymsg "exec $term --single-instance"
 
     # Kill focused window
-    bindsym $mod+Shift+q kill; exec swaymsg border pixel 3
+    bindsym $mod+Shift+q kill && exec swaymsg border pixel 3
 
-    # Start your launcher
-    bindsym $mod+d exec $menu --show=drun -I -i --conf="../wofi/style.css"  
+    # start your launcher || delay script is here to give time for the program to launch before setting the border again as wofi returns immediately after start of launch
+    bindsym $mod+d exec swaymsg 'border pixel 0' & $menu --show=drun -I -i --conf="../wofi/style.css"  & /home/Bee/.config/sway/melay.sh && swaymsg 'border pixel 3'
+
 
     # Drag floating windows by holding down $mod and left mouse button.
     # Resize them with right mouse button + $mod.
@@ -98,6 +99,17 @@ exec swayidle -w \
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
+    input type:touchpad {
+        #enable tap
+        tap enabled
+        #enable tap and drag
+        drag enabled
+        #enable middle click emulation
+        middle_emulation enabled
+        
+    }
+    
+
     #use pactl to adjust volume in pulse audio
     set $refresh_i3status kill all -SIGUSR1 i3status
     bindsym XF86AudioRaiseVolume exec  pactl set-sink-volume @DEFAULT_SINK@ +5%
@@ -105,19 +117,15 @@ exec swayidle -w \
     bindsym XF86AudioMute exec  pactl set-sink-mute @DEFAULT_SINK@ toggle 
 
     #use light to change brightness of display
-    exec  -N 5
-    bindsym XF86MonBrightnessUp exec  light -A 10
-    bindsym XF86MonBrightnessDown exec  light -U 10 
+    exec  light -N 5
+    bindsym XF86MonBrightnessUp exec light -A 10
+    bindsym XF86MonBrightnessDown exec light -U 10 
 
     #multimedia keys
-    bindsym XF86AudioPlay exec  playerctl play-pause
-    bindsym XF86AudioPause exec  playerctl play-pause
-    bindsym XF86AudioNext exec  playerctl next
-    bindsym XF86AudioPrev exec  playerctl previous
-
-
-
-
+    bindsym XF86AudioPlay exec playerctl play-pause
+    bindsym XF86AudioPause exec playerctl play-pause
+    bindsym XF86AudioNext exec playerctl next
+    bindsym XF86AudioPrev exec playerctl previous
 
 #
 # Moving around:
@@ -126,10 +134,10 @@ exec swayidle -w \
     bindsym $mod+m exec  swaymsg 'move workspace to output left' 
 
     # Move your focus around
-    bindsym $mod+$left exec  swaymsg 'border pixel 0' && swaymsg 'focus left'
-    bindsym $mod+$down exec  swaymsg 'border pixel 0' &&  swaymsg 'focus down'
-    bindsym $mod+$up exec  swaymsg 'border pixel 0' && swaymsg 'focus up'
-    bindsym $mod+$right exec  swaymsg 'border pixel 0' && swaymsg 'focus right'
+    bindsym $mod+$left exec swaymsg 'border pixel 0' && swaymsg 'focus left' 
+    bindsym $mod+$down exec swaymsg 'border pixel 0' &&  swaymsg 'focus down'
+    bindsym $mod+$up exec swaymsg 'border pixel 0' && swaymsg 'focus up'
+    bindsym $mod+$right exec swaymsg 'border pixel 0' && swaymsg 'focus right'
 
     bindsym --release $mod+$left exec  swaymsg border pixel 3  
     bindsym --release $mod+$down exec  swaymsg border pixel 3 
@@ -247,7 +255,7 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 #remove window title bar
-default_border pixel 0
+default_border pixel 3
 
 #               border    bg        text     indicator
 #         (normal border)                    (indicator for where next window will open) 
@@ -264,22 +272,19 @@ bar {
 
 assign [app_id="com.obsproject.Studio"] 6 
 assign [app_id="obsidian"] 3
-assign [class="WebCord"] 4
+assign [class="discord"] 4
 
+# start the area prompt of grimshow and save the result to the Pictures dir and copy to clipboarc
 bindsym Print exec "wl-copy < $(grimshot save area)"
 
 #smarter splitting cause im lazy :3
-for_window [app_id="kitty"] split toggle ; opacity .9
-
-
-#exec  swaymsg 'workspace 1; exec kitty --single-instance' && swaymsg 'workspace 1; exec kitty --single-instance' && swaymsg 'workspace 1; exec kitty --single-instance' 
-#exec  swaymsg 'workspace 2; exec firefox'
-
-
+for_window [app_id="kitty"] split toggle ; opacity .9 
 
 focus_follows_mouse no
 
 # move cursor to focused window on switch
 mouse_warping container
 
+# focus newly opened windows but not when they're opened on a different workspace
+focus_on_window_activation smart
 
