remove keystroke display, change font, update waybar

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,10 +6,10 @@ Fonts {{{
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Fira Code Retina
-bold_font        Fira Code Bold
-italic_font      Fira Code Light
-bold_italic_font Fira Code SemiBold
+font_family      JetBrainsMonoNL NFM 
+bold_font        JetBrainsMonoNL NFM  Bold
+italic_font      JetBrainsMonoNL NFM  Italic
+bold_italic_font JetBrainsMonoNL NFM Bold Italic
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
