updates to install script and getting rid of scripts

--- a/sway/config
+++ b/sway/config
@@ -13,6 +13,8 @@
     #               border    bg        text     indicator
     #         (normal border)                    (indicator for where next window will open) 
     client.focused "#7777EE" "#7777EE" "#ffffff" "#7777EE"
+    client.focused_inactive "#000000" "#000000" "#000000" "#000000"
+    client.unfocused "#000000" "#000000" "#000000" "#000000"
 
     # get screensharing working on obs
     exec systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
@@ -62,15 +64,10 @@
     bindsym $mod+m exec  swaymsg 'move workspace to output left' 
 
     # Move your focus around
-    bindsym $mod+$left exec swaymsg 'border pixel 0' && swaymsg 'focus left' 
-    bindsym $mod+$down exec swaymsg 'border pixel 0' &&  swaymsg 'focus down'
-    bindsym $mod+$up exec swaymsg 'border pixel 0' && swaymsg 'focus up'
-    bindsym $mod+$right exec swaymsg 'border pixel 0' && swaymsg 'focus right'
-
-    bindsym --release $mod+$left exec  swaymsg border pixel 3  
-    bindsym --release $mod+$down exec  swaymsg border pixel 3 
-    bindsym --release $mod+$up exec  swaymsg border pixel 3 
-    bindsym --release $mod+$right exec  swaymsg border pixel 3 
+    bindsym $mod+$left focus left 
+    bindsym $mod+$down focus down
+    bindsym $mod+$up focus up
+    bindsym $mod+$right focus right 
 
     # Move the focused window with the same, but add Shift
     bindsym $mod+Shift+$left move left
@@ -95,10 +92,10 @@
     bindsym $mod+Return exec swaymsg 'border pixel 0' & swaymsg "exec $term --single-instance"
 
     # Kill focused window
-    bindsym $mod+Shift+q exec /home/Bee/.config/sway/scripts/kill.sh
+    bindsym $mod+Shift+q kill
 
     # start your launcher || delay script is here to give time for the program to launch before setting the border again as wofi returns immediately after start of launch
-    bindsym $mod+d exec /home/Bee/.config/sway/scripts/dmenu.sh
+    bindsym $mod+d wofi --show=drun -I -i --conf="/home/Bee/.config/wofi/style.css" 
 
     # Reload the configuration file
     bindsym $mod+Shift+r reload
@@ -153,28 +150,28 @@
 
 
     # Switch to workspace
-    bindsym $mod+1 exec ~/.config/sway/scripts/workspaces/switch/switchWS1.sh 
-    bindsym $mod+2 exec ~/.config/sway/scripts/workspaces/switch/switchWS2.sh 
-    bindsym $mod+3 exec ~/.config/sway/scripts/workspaces/switch/switchWS3.sh 
-    bindsym $mod+4 exec ~/.config/sway/scripts/workspaces/switch/switchWS4.sh 
-    bindsym $mod+5 exec ~/.config/sway/scripts/workspaces/switch/switchWS5.sh 
-    bindsym $mod+6 exec ~/.config/sway/scripts/workspaces/switch/switchWS6.sh 
-    bindsym $mod+7 exec ~/.config/sway/scripts/workspaces/switch/switchWS7.sh 
-    bindsym $mod+8 exec ~/.config/sway/scripts/workspaces/switch/switchWS8.sh 
-    bindsym $mod+9 exec ~/.config/sway/scripts/workspaces/switch/switchWS9.sh 
-    bindsym $mod+0 exec ~/.config/sway/scripts/workspaces/switch/switchWS10.sh 
+    bindsym $mod+1 workspace number 1  
+    bindsym $mod+2 workspace number 2 
+    bindsym $mod+3 workspace number 3 
+    bindsym $mod+4 workspace number 4
+    bindsym $mod+5 workspace number 5
+    bindsym $mod+6 workspace number 6
+    bindsym $mod+7 workspace number 7
+    bindsym $mod+8 workspace number 8
+    bindsym $mod+9 workspace number 9 
+    bindsym $mod+0 workspace number 10
 
     # Move focused container to workspace
-    bindsym $mod+Shift+1 exec ~/.config/sway/scripts/workspaces/move/moveWS1.sh
-    bindsym $mod+Shift+2 exec ~/.config/sway/scripts/workspaces/move/moveWS2.sh
-    bindsym $mod+Shift+3 exec ~/.config/sway/scripts/workspaces/move/moveWS3.sh
-    bindsym $mod+Shift+4 exec ~/.config/sway/scripts/workspaces/move/moveWS4.sh
-    bindsym $mod+Shift+5 exec ~/.config/sway/scripts/workspaces/move/moveWS5.sh
-    bindsym $mod+Shift+6 exec ~/.config/sway/scripts/workspaces/move/moveWS6.sh
-    bindsym $mod+Shift+7 exec ~/.config/sway/scripts/workspaces/move/moveWS7.sh
-    bindsym $mod+Shift+8 exec ~/.config/sway/scripts/workspaces/move/moveWS8.sh
-    bindsym $mod+Shift+9 exec ~/.config/sway/scripts/workspaces/move/moveWS9.sh
-    bindsym $mod+Shift+0 exec ~/.config/sway/scripts/workspaces/move/moveWS10.sh
+    bindsym $mod+Shift+1 move container to workspace number 1
+    bindsym $mod+Shift+2 move container to workspace number 2
+    bindsym $mod+Shift+3 move container to workspace number 3
+    bindsym $mod+Shift+4 move container to workspace number 4
+    bindsym $mod+Shift+5 move container to workspace number 5
+    bindsym $mod+Shift+6 move container to workspace number 6
+    bindsym $mod+Shift+7 move container to workspace number 7
+    bindsym $mod+Shift+8 move container to workspace number 8
+    bindsym $mod+Shift+9 move container to workspace number 9
+    bindsym $mod+Shift+0 move container to workspace number 10
 
     # make gaps between windows
     gaps inner 3
@@ -224,8 +221,6 @@
     #  smarter splitting cause im lazy :3
     for_window [app_id="kitty"] split toggle ; opacity .97 
     
-    # make blanket launch in scratchpad
-    #for_window [name="Blanket"] , move scratchpad
 
 
 
