add aliases, add progs to install script, add pomo shortcut

--- a/sway/config
+++ b/sway/config
@@ -102,6 +102,8 @@
 
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
+    
+    bindsym $mod+Shift+p exec waybar-module-pomodoro toggle 
 
 ### Input configuration
 
