add tofi ; install fixes ; bell change

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -617,7 +617,8 @@ sync_to_monitor yes
 
 #: Terminal bell {{{
 
-# enable_audio_bell yes
+enable_audio_bell no
+command_on_bell pw-play --latency 256 ~/.config/kitty/gunter_quack.mp3
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
