--- a/sway/config
+++ b/sway/config
@@ -8,7 +8,7 @@
 
 
     # set default border size to 3
-    default_border pixel 3
+    default_border pixel 2
 
     #               border    bg        text     indicator
     #         (normal border)                    (indicator for where next window will open) 
@@ -21,16 +21,16 @@
     exec dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP=sway
 
     # xwayland stuff
-    xwayland enable
+    #xwayland enable
 
     # Logo key. Use Mod1 for Alt.
     set $mod Mod1
 
     # Your preferred terminal emulator
-    set $term kitty
+    set $term kitty --single-instance
 
     # Your preferred application launcher
-    set $menu tofi-drun --drun-launch=true --font /home/Bee/.local/share/fonts/JetBrainsMonoNLNerdFontMono-Regular.ttf --ascii-input true --hint-font false 
+    set $menu tofi-drun --drun-launch=true --font /home/Bee/.local/share/fonts/JetBrainsMonoNLNerdFontMono-Regular.ttf --ascii-input true --hint-font false --fuzzy-match true 
 
     #use pactl to adjust volume in pulse audio
     set $refresh_i3status kill all -SIGUSR1 i3status
@@ -89,7 +89,7 @@
     bindsym $mod+Shift+x exec wlogout -p layer-shell
 
     # Start a terminal
-    bindsym $mod+Return exec swaymsg 'border pixel 0' & swaymsg "exec $term --single-instance"
+    bindsym $mod+Return exec $term
 
     # Kill focused window
     bindsym $mod+Shift+q kill
