--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "BeeConfig"]
-	path = BeeConfig
+[submodule ".config/nvim"]
+	path = .config/nvim
 	url = git@github.com:Love-Pengy/BeeConfig.git
