woopsies forgot me files

--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,27 @@
 !/.gitignore
 !/.config/
 /.config/**
-!/.config/dunst
+!.config/dunst
+!.config/dunst/*
+
+!.config/kitty
 !/.config/kitty/*
+
+!.config/nemo
 !/.config/nemo/*
+
+!.config/sway
 !/.config/sway/*
+
+!.config/tofi
 !/.config/tofi/*
+
+!.config/waybar
 !/.config/waybar/*
+
+!.config/wlogout
 !/.config/wlogout/*
+
 !backup.sh
 !.bashrc
 !.profile
