--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 /**
 !/.gitignore
+
 !/.config/
 /.config/**
+
 !.config/dunst
 !.config/dunst/*
 
@@ -22,6 +24,16 @@
 
 !.config/wlogout
 !/.config/wlogout/*
+
+!/.mozilla/
+/.mozilla/**
+!.mozilla/firefox/
+.mozilla/firefox/**
+!.mozilla/firefox/v3bgm5ia.default-release/
+.mozilla/firefox/v3bgm5ia.default-release/**
+!.mozilla/firefox/v3bgm5ia.default-release/chrome
+.mozilla/firefox/v3bgm5ia.default-release/chrome/**
+!.mozilla/firefox/v3bgm5ia.default-release/chrome/userChrome.css
 
 !backup.sh
 !.bashrc
